# src/main/resources/swagger/api.yaml
@@ -19,6 +19,54 @@ tags:
     description: Operations available to regular developers
 
 paths:
+  /account/sign-in:
+    post:
+      tag:
+        - Account Management
+      summary: adds an inventory item
+      operationId: signIn
+      description: Adds an item to the system
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: SignInRequest
+          description: Inventory item to add
+          schema:
+            $ref: '#/definitions/SignInRequest'
+      responses:
+        201:
+          description: item created
+        400:
+          description: invalid input, object invalid
+        409:
+          description: an existing item already exists
+  /account/sign-up:
+    post:
+      tag:
+        - Account Management
+      summary: adds an inventory item
+      operationId: signUp
+      description: Adds an item to the system
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: SignUpRequest
+          description: Inventory item to add
+          schema:
+            $ref: '#/definitions/SignUpRequest'
+      responses:
+        201:
+          description: item created
+        400:
+          description: invalid input, object invalid
+        409:
+          description: an existing item already exists
   /inventory:
     get:
       tags:
@@ -82,6 +130,29 @@ paths:
         409:
           description: an existing item already exists
 definitions:
+  SignInRequest:
+    type: object
+    properties:
+      email:
+        type: email
+      password:
+        type: password
+    required:
+      - email
+      - password
+  SignUpRequest:
+    type: object
+    properties:
+      email:
+        type: email
+      password:
+        type: password
+      confirmation:
+        type: password
+    required:
+      - email
+      - password
+      - confirmation
   InventoryItem:
     type: object
     required:
